# blinky-st

./: Cargo.toml  debug.gdb  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
src/: main.rs
