[package]
authors = ["sean"]
edition = "2018"
readme = "README.md"
name = "blinky-st"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
defmt-rtt = "0.2.0"
panic-probe = {version = "0.2.0", features = ["print-defmt"]}
defmt = "0.2.0"

[dependencies.stm32f7xx-hal]
version = "0.3.0"
features = ["stm32f767", "rt"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[features]
default = [
#    "defmt-info",  
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
